@@ -17,6 +17,7 @@ Changelog for 1.4.6
 * New returns-specific logic (see release notes) (Chris T)
 * Fixed bug 1262, cannot post overpayment with formatted nums (Chris T)
 * Fixed bug 1263, error when control_code not filled in (chris T)
+* Fixed update button not showing after save (Chris T)
 
 Pongracz I is Pongracz Istvan
 Chris T is Chris Travers
